--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,10 @@ scikit-learn>=1.3.0
 # Production Server
 gunicorn>=21.0.0
 
+# For model download from cloud storage
+requests>=2.31.0
+tqdm>=4.65.0
+
 # Optional: For automated dataset download
 # Uncomment if you want to download dataset programmatically
 # kagglehub>=0.2.0
